--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "20.x"
+    "node": ">=20.x"
   },
   "scripts": {
     "with-env": "dotenv",
@@ -12,9 +12,9 @@
     "start": "next start",
     "testing-build": "npm run prisma:reset && dotenv -- npm run build",
     "testing-start": "dotenv -- npm run start",
-    "npm:deps": "ncu",
-    "npm:update-i": "ncu -i",
-    "npm:update-all": "ncu -u",
+    "package:deps": "ncu",
+    "package:update": "ncu -i",
+    "package:update:force": "ncu -u",
     "prisma:migrate": "dotenv -- npx prisma migrate dev",
     "prisma:generate": "dotenv -- npx prisma generate",
     "prisma:deploy": "dotenv -- npx prisma migrate deploy",
@@ -22,20 +22,25 @@
     "prisma:reset": "dotenv -- npx prisma migrate reset --force",
     "prisma:seed": "dotenv -- npx prisma db seed",
     "prisma:studio": "dotenv -- npx prisma studio",
-    "lint": "npx @biomejs/biome lint --write *",
-    "format": "npx @biomejs/biome check --write * && npm run prisma:format && tsc --noEmit --project tsconfig.json && npx eslint --fix ."
+    "eslint": "npx eslint .",
+    "eslint:fix": "npx eslint --fix .",
+    "prettier": "npx @biomejs/biome format *",
+    "prettier:fix": "npx @biomejs/biome format --write *",
+    "tsc": "npx tsc --noEmit --project tsconfig.json",
+    "biome": "npx @biomejs/biome check --write *",
+    "ci": "npm run biome && npm run eslint:fix && npm run tsc && npm run prisma:format"
   },
   "dependencies": {
-    "@mantine/core": "^7.17.0",
-    "@mantine/hooks": "^7.17.0",
-    "@prisma/client": "^6.4.1",
-    "@tabler/icons-react": "^3.30.0",
-    "@tanstack/react-query": "^5.66.11",
-    "@trpc/client": "^11.0.0-rc.477",
-    "@trpc/next": "^11.0.0-rc.477",
-    "@trpc/react-query": "^11.0.0-rc.477",
-    "@trpc/server": "^11.0.0-rc.477",
-    "next": "15.2.0",
+    "@mantine/core": "^7.17.4",
+    "@mantine/hooks": "^7.17.4",
+    "@prisma/client": "^6.6.0",
+    "@tabler/icons-react": "^3.31.0",
+    "@tanstack/react-query": "^5.72.2",
+    "@trpc/client": "^11.1.0",
+    "@trpc/next": "^11.1.0",
+    "@trpc/react-query": "^11.1.0",
+    "@trpc/server": "^11.1.0",
+    "next": "15.3.0",
     "react": "^19",
     "react-dom": "^19",
     "superjson": "^2.2.2",
@@ -43,29 +48,29 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@eslint/js": "^9.21.0",
-    "@tailwindcss/postcss": "^4.0.9",
-    "@types/node": "^22.13.5",
+    "@eslint/js": "^9.24.0",
+    "@tailwindcss/postcss": "^4.1.3",
+    "@types/node": "^22.14.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@typescript-eslint/eslint-plugin": "^8.25.0",
-    "@typescript-eslint/parser": "^8.25.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
     "dotenv-cli": "^8.0.0",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react": "^7.37.4",
+    "eslint": "^9.24.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.0.0",
-    "npm-check-updates": "^17.1.15",
+    "npm-check-updates": "^17.1.18",
     "postcss": "^8.5.3",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
-    "prisma": "^6.4.1",
+    "prisma": "^6.6.0",
     "prisma-case-format": "^2.2.1",
-    "tailwindcss": "^4.0.9",
+    "tailwindcss": "^4.1.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.25.0"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1"
   },
   "prisma": {
     "seed": "dotenv -- ts-node -r tsconfig-paths/register --transpile-only --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
