--- a/biome.json
+++ b/biome.json
@@ -1,10 +1,8 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
-  "organizeImports": {
-    "enabled": false
-  },
+  "$schema": "https://biomejs.dev/schemas/2.1.1/schema.json",
+  "assist": { "actions": { "source": { "organizeImports": "off" } } },
   "files": {
-    "include": ["./*.js", "./*.mjs", "./*.ts", "./*.tsx", "./*.json"]
+    "includes": ["**/*.js", "**/*.mjs", "**/*.ts", "**/*.tsx", "**/*.json"]
   },
   "formatter": {
     "enabled": true,
